Add FAQ and services sections to index.html

--- a/index.html
+++ b/index.html
@@ -927,11 +927,534 @@ window.addEventListener("resize",()=>{
                 </div>
             </div>
 
+            <div class="question">
+                <div class="question-title">
+                    <div class="q-circle">Q3</div>
+                    <h3>How will you finance your education?</h4>
+                </div>
+                <div class="question-body">
+                    Have specific documentation ready. Clearly explain your financial support sources.
+            
+        </div>
+
+
+         <div class="question">
+                <div class="question-title">
+                    <div class="q-circle">Q4</div>
+                    <h3>What is your intended major and why?</h5>
+                </div>
+                <div class="question-body">
+                    Show genuine interest and knowledge about your field. Connect it to your career goals..
+            
+    </div>
+
+</section>
+
+<!-- ===== OUR SERVICES SECTION START ===== -->
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+<style>
+.services-section{
+    padding:90px 0;
+    background:transparent;
+}
+
+.services-section *{
+    font-family:'Inter', sans-serif;
+}
+
+.services-container{
+    width:90%;
+    max-width:1200px;
+    margin:auto;
+}
+
+.services-title{
+    text-align:center;
+    margin-bottom:60px;
+}
+
+.services-title h1{
+    font-size:44px;
+    font-weight:700;
+    color:#0a3d91;
+}
+
+.services-title p{
+    margin-top:12px;
+    font-size:18px;
+    color:#555;
+}
+
+/* Cards */
+.services-grid{
+    display:grid;
+    grid-template-columns:repeat(3,1fr);
+    gap:30px;
+}
+
+.service-card{
+    background:#fff;
+    border:1px solid #e6eaf2;
+    border-radius:20px;
+    padding:40px 35px;
+    transition:0.3s;
+}
+
+.service-card:hover{
+    transform:translateY(-5px);
+    box-shadow:0 15px 30px rgba(0,0,0,0.08);
+}
+
+.service-icon{
+    font-size:42px;
+    margin-bottom:20px;
+}
+
+.service-card h3{
+    font-size:24px;
+    font-weight:700;
+    color:#003da5;
+    margin-bottom:15px;
+}
+
+.service-card p{
+    font-size:16px;
+    color:#555;
+    margin-bottom:20px;
+    line-height:1.6;
+}
+
+.service-card ul{
+    list-style:none;
+    padding:0;
+}
+
+.service-card ul li{
+    font-size:16px;
+    color:#222;
+    margin-bottom:10px;
+}
+
+.service-card ul li::before{
+    content:"✓";
+    color:#0a3d91;
+    font-weight:700;
+    margin-right:10px;
+}
+
+/* Mobile */
+@media(max-width:900px){
+    .services-grid{
+        grid-template-columns:1fr;
+    }
+}
+</style>
+
+<section class="services-section">
+
+    <div class="services-container">
+
+        <div class="services-title">
+            <h1>Our Services</h1>
+            <p>Comprehensive visa consultancy services tailored to your needs</p>
+        </div>
+
+        <div class="services-grid">
+
+            <div class="service-card">
+                <div class="service-icon">📋</div>
+                <h3>Visa Assessment</h3>
+                <p>
+                    Initial consultation to evaluate your visa eligibility and discuss options.
+                </p>
+                <ul>
+                    <li>Eligibility check</li>
+                    <li>Documentation review</li>
+                    <li>Timeline planning</li>
+                </ul>
+            </div>
+
+            <div class="service-card">
+                <div class="service-icon">📄</div>
+                <h3>Document Preparation</h3>
+                <p>
+                    Help organize and prepare all required documents for your application.
+                </p>
+                <ul>
+                    <li>SOP writing</li>
+                    <li>Document checklist</li>
+                    <li>Quality review</li>
+                </ul>
+            </div>
+
+            <div class="service-card">
+                <div class="service-icon">🎤</div>
+                <h3>Interview Coaching</h3>
+                <p>
+                    One-on-one coaching sessions to prepare you for your visa interview.
+                </p>
+                <ul>
+                    <li>Mock interviews</li>
+                    <li>Question practice</li>
+                    <li>Communication tips</li>
+                </ul>
+            </div>
+
         </div>
 
     </div>
 
 </section>
+
+<!-- ===== WHY CHOOSE US SECTION START ===== -->
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+<style>
+.choose-section{
+    padding:80px 0;
+}
+
+.choose-box{
+    background:linear-gradient(135deg,#0a3d91,#0b55c4);
+    border-radius:30px;
+    padding:70px 50px;
+    color:#ffffff;
+}
+
+.choose-box *{
+    font-family:'Inter', sans-serif;
+}
+
+.choose-title{
+    text-align:center;
+    font-size:40px;
+    font-weight:700;
+    margin-bottom:55px;
+}
+
+.choose-grid{
+    display:grid;
+    grid-template-columns:repeat(4,1fr);
+    gap:40px;
+    text-align:center;
+}
+
+.choose-item img{
+    width:55px;
+    margin-bottom:20px;
+}
+
+.choose-item h3{
+    font-size:22px;
+    font-weight:700;
+    margin-bottom:12px;
+}
+
+.choose-item p{
+    font-size:16px;
+    line-height:1.6;
+    opacity:0.9;
+}
+
+/* Mobile */
+@media(max-width:900px){
+    .choose-grid{
+        grid-template-columns:1fr;
+        gap:35px;
+    }
+
+    .choose-title{
+        font-size:32px;
+    }
+}
+</style>
+
+<section class="choose-section">
+
+    <div class="choose-box">
+
+        <div class="choose-title">Why Choose Us?</div>
+
+        <div class="choose-grid">
+
+            <div class="choose-item">
+                <img src="https://cdn-icons-png.flaticon.com/512/616/616489.png">
+                <h3>Expert Team</h3>
+                <p>Experienced consultants with proven track record</p>
+            </div>
+
+            <div class="choose-item">
+                <img src="https://cdn-icons-png.flaticon.com/512/3209/3209265.png">
+                <h3>Personalized Approach</h3>
+                <p>Customized guidance for your unique situation</p>
+            </div>
+
+            <div class="choose-item">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828640.png">
+                <h3>High Success Rate</h3>
+                <p>Over 95% approval rate for our clients</p>
+            </div>
+
+            <div class="choose-item">
+                <img src="https://cdn-icons-png.flaticon.com/512/2462/2462719.png">
+                <h3>24/7 Support</h3>
+                <p>Always available to answer your questions</p>
+            </div>
+
+        </div>
+
+    </div>
+
+</section>
+
+<!-- ===== GET IN TOUCH SECTION START ===== -->
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+<style>
+.contact-section{
+    padding:90px 0;
+    text-align:center;
+    font-family:'Inter', sans-serif;
+}
+
+.contact-title{
+    font-size:48px;
+    font-weight:700;
+    color:#0b3fa5;
+    margin-bottom:10px;
+}
+
+.contact-subtitle{
+    font-size:20px;
+    color:#555;
+    margin-bottom:70px;
+}
+
+.contact-grid{
+    display:grid;
+    grid-template-columns:repeat(4,1fr);
+    gap:30px;
+    max-width:1200px;
+    margin:auto;
+}
+
+.contact-card{
+    background:#f7fbfc;
+    border-radius:22px;
+    padding:45px 30px;
+    box-shadow:0 0 0 1px #e4ebf0;
+}
+
+.contact-card img{
+    width:55px;
+    margin-bottom:25px;
+}
+
+.contact-card h3{
+    font-size:26px;
+    color:#0b3fa5;
+    margin-bottom:20px;
+}
+
+.contact-card p{
+    font-size:18px;
+    line-height:1.8;
+    color:#333;
+}
+
+/* Mobile */
+@media(max-width:900px){
+    .contact-grid{
+        grid-template-columns:1fr;
+    }
+
+    .contact-title{
+        font-size:36px;
+    }
+}
+</style>
+
+<section class="contact-section">
+
+    <h1 class="contact-title">Get In Touch</h1>
+    <p class="contact-subtitle">We're here to help you achieve your USA dreams</p>
+
+    <div class="contact-grid">
+
+        <div class="contact-card">
+            <img src="https://cdn-icons-png.flaticon.com/512/684/684908.png">
+            <h3>Office Location</h3>
+            <p>
+                New Delhi, India<br>
+                Mumbai, India<br>
+                Bangalore, India
+            </p>
+        </div>
+
+        <div class="contact-card">
+            <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png">
+            <h3>Email</h3>
+            <p>
+                info@fly2usa.com<br>
+                support@fly2usa.com
+            </p>
+        </div>
+
+        <div class="contact-card">
+            <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png">
+            <h3>Phone</h3>
+            <p>
+                +91-11-4567-8900<br>
+                +91-98765-43210
+            </p>
+        </div>
+
+        <div class="contact-card">
+            <img src="https://cdn-icons-png.flaticon.com/512/2088/2088617.png">
+            <h3>Hours</h3>
+            <p>
+                Mon - Fri: 9 AM - 6 PM<br>
+                Sat: 10 AM - 4 PM<br>
+                Sun: Closed
+            </p>
+        </div>
+
+    </div>
+
+</section>
+<!-- ===== CONTACT FORM SECTION START ===== -->
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+<style>
+.contact-form-box{
+    max-width:720px;
+    margin:80px auto;
+    padding:45px 50px;
+    background:#ffffff;
+    border-radius:18px;
+    box-shadow:0 0 0 1px #e6edf3;
+    font-family:'Inter', sans-serif;
+}
+
+.contact-form-box h2{
+    font-size:28px;
+    font-weight:700;
+    color:#0b3fa5;
+    margin-bottom:35px;
+}
+
+.form-group{
+    margin-bottom:25px;
+}
+
+.form-group label{
+    display:block;
+    font-size:15px;
+    font-weight:600;
+    margin-bottom:8px;
+    color:#1b1b1b;
+}
+
+.form-group input,
+.form-group select,
+.form-group textarea{
+    width:100%;
+    padding:14px 16px;
+    font-size:16px;
+    border:1.5px solid #cfd8e3;
+    border-radius:10px;
+    outline:none;
+    transition:.2s;
+}
+
+.form-group textarea{
+    height:120px;
+    resize:none;
+}
+
+.form-group input::placeholder,
+.form-group textarea::placeholder{
+    color:#888;
+}
+
+.form-group input:focus,
+.form-group select:focus,
+.form-group textarea:focus{
+    border-color:#0b3fa5;
+}
+
+.submit-btn{
+    width:100%;
+    padding:16px;
+    font-size:18px;
+    font-weight:600;
+    border:none;
+    border-radius:12px;
+    cursor:pointer;
+    color:#fff;
+    background:linear-gradient(90deg,#0b3fa5,#0056d6);
+}
+
+.submit-btn:hover{
+    opacity:0.95;
+}
+
+/* Mobile */
+@media(max-width:600px){
+    .contact-form-box{
+        padding:35px 25px;
+    }
+}
+</style>
+
+<div class="contact-form-box">
+
+    <h2>Send us a Message</h2>
+
+    <form>
+
+        <div class="form-group">
+            <label>Full Name *</label>
+            <input type="text" placeholder="Your name" required>
+        </div>
+
+        <div class="form-group">
+            <label>Email Address *</label>
+            <input type="email" placeholder="your@email.com" required>
+        </div>
+
+        <div class="form-group">
+            <label>Phone Number *</label>
+            <input type="tel" placeholder="+91-XXXXXXXXXX" required>
+        </div>
+
+        <div class="form-group">
+            <label>Visa Type *</label>
+            <select required>
+                <option>F1 Student Visa</option>
+                <option>B1/B2 Visitor Visa</option>
+                <option>H1B Work Visa</option>
+                <option>PR / Green Card</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label>Message *</label>
+            <textarea placeholder="Tell us how we can help you..." required></textarea>
+        </div>
+
+        <button class="submit-btn">Send Message</button>
+
+    </form>
+
+</div>
+
+
 
 
 
