Change text colors to white in index.html
Updated color scheme to use white for various titles and text elements.

--- a/index.html
+++ b/index.html
@@ -807,15 +807,14 @@ window.addEventListener("resize",()=>{
 .interview-title h1{
     font-size:42px;
     font-weight:700;
-    color:#0a3d91;
+    color:#ffffff;   /* WHITE */
 }
 
 .interview-title p{
     margin-top:10px;
     font-size:18px;
-    color:#555;
+    color:#ffffff;   /* WHITE */
 }
-
 /* Main box */
 .interview-box{
     border-radius:20px;
@@ -851,6 +850,11 @@ window.addEventListener("resize",()=>{
     padding:22px 25px;
     background:#f7fafc;
 }
+.question-title{
+    color:#003da5;
+    opacity:1;
+}
+
 
 .q-circle{
     width:42px;
@@ -861,13 +865,15 @@ window.addEventListener("resize",()=>{
     display:flex;
     align-items:center;
     justify-content:center;
-    font-weight:700;
+    font-weight:800;
+    flex-shrink:0;        
 }
 
 .question-title h3{
     font-size:18px;
-    color:#003da5;
+    color:#003da5;   /* blue */
     font-weight:700;
+    opacity:1;       
 }
 
 .question-body{
@@ -935,18 +941,7 @@ window.addEventListener("resize",()=>{
                 <div class="question-body">
                     Have specific documentation ready. Clearly explain your financial support sources.
             
-        </div>
-
-
-         <div class="question">
-                <div class="question-title">
-                    <div class="q-circle">Q4</div>
-                    <h5>What is your intended major and why?</h5>
                 </div>
-                <div class="question-body">
-                    Show genuine interest and knowledge about your field. Connect it to your career goals..
-            
-    </div>
 
 </section>
 
@@ -978,14 +973,15 @@ window.addEventListener("resize",()=>{
 .services-title h1{
     font-size:44px;
     font-weight:700;
-    color:#0a3d91;
+    color:#ffffff;   /* white */
 }
 
 .services-title p{
     margin-top:12px;
     font-size:18px;
-    color:#555;
+    color:#ffffff;   /* white */
 }
+
 
 /* Cards */
 .services-grid{
@@ -1221,16 +1217,16 @@ window.addEventListener("resize",()=>{
     font-family:'Inter', sans-serif;
 }
 
-.contact-title{
+..contact-title{
     font-size:48px;
     font-weight:700;
-    color:#0b3fa5;
+    color:#ffffff;   /* WHITE */
     margin-bottom:10px;
 }
 
 .contact-subtitle{
     font-size:20px;
-    color:#555;
+    color:#ffffff;   /* WHITE */
     margin-bottom:70px;
 }
 
