Modify contact details in index.html
Updated contact information and removed phone details.

--- a/index.html
+++ b/index.html
@@ -1285,9 +1285,8 @@ window.addEventListener("resize",()=>{
             <img src="https://cdn-icons-png.flaticon.com/512/684/684908.png">
             <h3>Office Location</h3>
             <p>
-                New Delhi, India<br>
-                Mumbai, India<br>
-                Bangalore, India
+                Arkansas, USA<br>
+                
             </p>
         </div>
 
@@ -1300,15 +1299,7 @@ window.addEventListener("resize",()=>{
             </p>
         </div>
 
-        <div class="contact-card">
-            <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png">
-            <h3>Phone</h3>
-            <p>
-                +91-11-4567-8900<br>
-                +91-98765-43210
-            </p>
-        </div>
-
+        
         <div class="contact-card">
             <img src="https://cdn-icons-png.flaticon.com/512/2088/2088617.png">
             <h3>Hours</h3>
